--- a/meeting_room.css
+++ b/meeting_room.css
@@ -8,16 +8,17 @@ body {
 th {
 color: black;
  border-collapse: collapse;
+    padding: 10px;
+    font-size: larger;
+}
+tr{
     border: 1px solid black;
-    padding: 5px;
-    font-size: large;
-} 
+}
 table, td {
     border-collapse: collapse;
-    border: 1px solid black;
     color: black;
     background-color: lightgray;
-    padding: 5px;
+    padding: 10px;
 }
 h2{
     font-size: x-large;
