--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 .nav {
     margin-top: 100px;
+    margin-bottom: 20px;
 }
 
 #header {
-    margin-bottom: 25px;
+    margin-bottom: 20px;
 }
 
 #date {
@@ -15,7 +16,7 @@ h1 {
 }
 
 #title {
-    margin-left: 12%;
+    margin-left: 10%;
     font-weight: bold;
     border-bottom: 1px dotted gray;
     width: 40%;
@@ -24,37 +25,91 @@ h1 {
 #img {
     float: right;
     margin-right: 25%;
+    height: 40px;
+    width: 120px;
 };
 
 #table-holder {
-    margin: 30%;
-    width: 500px;
+    width: auto;
+    border-bottom: 6px inset #7094db; 
+}
+
+body {
+    background-image: url('./assets/tiny-squares.png');
 }
 
 #reservation-display {
-    margin-left: 10%;
+    float: right;
+    margin-left: 9.5%;
+    margin-top: 3%;
+    max-height: 400px;
+    max-width: 1450px;
     text-align: center;
     align-content: center;
-    border-bottom: 5px solid #4fc4f9;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 };
 
-#table {
-    width: 700px;
+table {
+    /* z-index: 1; */
     text-align: center;
     align-content: center;
-    border-left: 5px solid #4fc4f9;
-    border-bottom: 5px solid #4fc4f9;
+    border-collapse: collapse;
 }
 
 .table-row {
     background-color: #4259a3;
-    border-left: 6px solid #4fc4f9;
+    border-left: 6px inset #7094db;
+}
+
+#table-border {
+    background-color: #4259a3;
+    border-left: 6px inset #7094db;
+    border-bottom: 6px outset #7094db;
 }
 
 .table-section {
     background-image: url(./assets/3px-tile.png);
     padding: 3px;
-    height: 50px;
+    height: 30px;
+    border: 3px solid #4259a3;
     color: beige;
-    border: 5px solid #4259a3;
+}
+
+.table-description {
+    margin-left: 7%;
+    padding: 3px; 
+    align-content: center;
+    position: relative;
+    max-height: 55px;
+    max-width: 405px;
+    overflow: scroll auto;
+}
+
+#border {
+    margin-left: 9.3%; 
+    margin-top: -1%;
+    left: 95%;
+    border-bottom: 6px solid #4fc4f9;
+    border-left:  7px solid #4fc4f9;
+    -webkit-box-shadow: 0 7px 4px #777;
+	-moz-box-shadow: 0 7px 4px #777;
+	box-shadow: 0 7px 4px #777;
+}
+
+#brand {
+    margin-top: 2%; 
+    text-align: center;
+}
+
+.footer {
+    margin-top: 5%;
+    margin-bottom: -5%;
+    border-top: 1px dotted gray;
+    background-color: whitesmoke;
 }
